--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lightweight component to access lifecycle hooks",
   "main": "react-lifecycle-gate.js",
   "scripts": {
-    "test": "mocha rlg.test.js --compilers js:babel-core/register"
+    "test": "jest"
   },
   "keywords": [
     "react",
@@ -16,17 +16,14 @@
   "author": "Fredrik Carlsson",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
     "babel-env": "^2.4.1",
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.4.3",
-    "jsdom": "^11.10.0",
-    "mocha": "^5.1.1",
     "sinon": "^5.0.7"
   },
-  "peerDependencies": {
+  "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   }
