--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.4.3",
+    "react-dom": "^16.3.2",
     "sinon": "^5.0.7"
   },
-  "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+  "peerDependencies": {
+    "react": ">= 0.14",
   },
   "repository": {
     "type": "git",
