--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "sinon": "^5.0.7"
   },
   "peerDependencies": {
-    "react": ">= 0.14",
+    "react": ">= 0.14"
   },
   "repository": {
     "type": "git",
