add the update cycle hooks as well

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A lightweight component to access lifecycle hooks",
   "main": "react-lifecycle-gate.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch"
   },
   "keywords": [
     "react",
